@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam nodesep 55
skinparam ranksep 55
skinparam classFontSize 12
skinparam classAttributeFontSize 11
left to right direction

' ============================================================
' Design-level — DAO Abstract Factory (NFR-01 persistenza)
' Stile conciso: AppContext (holder) -> DaoFactory (abstract)
' -> concrete factory (Creates) -> prodotti che realizzano le interfacce.
' ============================================================

' ---------- Holder / chi usa la factory ----------
class "ApplicationModeManager\n<<singleton>>" as CTX {
  - factory : DAOFactory
  + getInstance() : ApplicationModeManager
  + getDAOFactory() : DAOFactory
}

' ---------- Abstract Factory ----------
interface "DAOFactory" <<interface>> {
  + getUtenteDAO() : UtenteDAO
  + getProdottoDAO() : ProdottoDAO
  + getOrdineDAO() : OrdineDAO
  + getBuonoDAO() : BuonoDAO
}

' ---------- Concrete factory (come Json/Db del riferimento) ----------
class "DemoDAOFactory" {
  + getUtenteDAO() : UtenteDAO
  + getProdottoDAO() : ProdottoDAO
  + getOrdineDAO() : OrdineDAO
  + getBuonoDAO() : BuonoDAO
}
class "JDBCDAOFactory" {
  + getUtenteDAO() : UtenteDAO
  + getProdottoDAO() : ProdottoDAO
  + getOrdineDAO() : OrdineDAO
  + getBuonoDAO() : BuonoDAO
}

' ---------- Frecce: chi usa / chi crea ----------
ApplicationModeManager -[hidden]down- DAOFactory
CTX --> DAOFactory : Uses
DemoDAOFactory  ..|> DAOFactory
JDBCDAOFactory  ..|> DAOFactory

' ---------- Abstract Products (interfacce DAO) ----------
interface "UtenteDAO" <<interface>>
interface "ProdottoDAO" <<interface>>
interface "OrdineDAO" <<interface>>
interface "BuonoDAO" <<interface>>

' ---------- Concrete Products (3 famiglie) ----------
class "DemoUtenteDAO"
class "DemoProdottoDAO"
class "DemoOrdineDAO"
class "DemoBuonoDAO"


class "JDBCUtenteDAO"
class "JDBCProdottoDAO"
class "JDBCOrdineDAO"
class "JDBCBuonoDAO"

' ---------- Creates (factory -> prodotto concreto) ----------
DemoDAOFactory ..> DemoUtenteDAO : Creates
DemoDAOFactory ..> DemoProdottoDAO : Creates
DemoDAOFactory ..> DemoOrdineDAO : Creates
DemoDAOFactory ..> DemoBuonoDAO : Creates


JDBCDAOFactory ..> JDBCUtenteDAO : Creates
JDBCDAOFactory ..> JDBCProdottoDAO : Creates
JDBCDAOFactory ..> JDBCOrdineDAO : Creates
JDBCDAOFactory ..> JDBCBuonoDAO : Creates

' ---------- Realization: prodotto -> interfaccia ----------
DemoUtenteDAO  .up.|> UtenteDAO
FSUtenteDAO    .up.|> UtenteDAO
JDBCUtenteDAO  .up.|> UtenteDAO
DemoProdottoDAO .up.|> ProdottoDAO
FSProdottoDAO   .up.|> ProdottoDAO
JDBCProdottoDAO .up.|> ProdottoDAO
DemoOrdineDAO  .up.|> OrdineDAO
FSOrdineDAO    .up.|> OrdineDAO
JDBCOrdineDAO  .up.|> OrdineDAO
DemoBuonoDAO   .up.|> BuonoDAO
FSBuonoDAO     .up.|> BuonoDAO
JDBCBuonoDAO   .up.|> BuonoDAO


note bottom of DAOFactory
  Esiste anche FSDAOFactory (Filesystem JSON) con la stessa
  struttura: FS*DAO implementano le stesse interfacce.
end note
@enduml